# exp-files

./: LICENSE  README.md  main.py  pyproject.toml
src/exp_files/: cli.py  processor.py  settings.py  utils.py
tests/: test_processor.py
